--- a/base/templates/base/requete_form.html
+++ b/base/templates/base/requete_form.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container mt-6">
+<div class="container mt-6 px-4 sm:px-6 lg:px-8">
     {% for message in messages %}
         <div class="alert alert-{{ message.tags }} p-4 rounded-lg mb-4">
             {{ message }}
@@ -10,7 +10,7 @@
     {% endfor %}
 </div>
 
-<section class="py-16 bg-white">
+<section class="py-16 bg-white px-4 sm:px-6 lg:px-8">
     <div class="max-w-4xl mx-auto text-center">
         <h2 class="text-3xl font-semibold mb-6">Fournissez votre requête de recherche</h2>
         <p class="text-lg mb-6 text-gray-700">Cherchez une maison, boutique, hôtel, etc. Remplissez ce formulaire pour nous faire part de vos besoins.</p>
@@ -62,8 +62,6 @@
                 </div>
             </div>
 
-            
-
             <div class="flex justify-between items-center mt-4">
                 <button type="submit" class="w-full py-2 px-4 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-blue-500">
                     Soumettre la requête
@@ -72,4 +70,5 @@
         </form>
     </div>
 </section>
+
 {% endblock %}
