--- a/templates/base.html
+++ b/templates/base.html
@@ -81,6 +81,9 @@
          <li>
             <a href="{% url 'requete_create' %}" class="block px-4 py-2 text-white hover:bg-gray-700">Rechercher un immobilier</a>
         </li> 
+        <li>
+            <a href="{% url 'list_product_rewards' %}" class="block px-4 py-2 text-white hover:bg-gray-700">Produits des points</a>
+        </li>
     </ul>
 </div>
 
@@ -166,6 +169,10 @@
         <li>
             <a href="{% url 'requete_create' %}" class="block px-4 py-2 text-white hover:bg-gray-700">Rechercher un immobilier</a>
         </li>
+        <li>
+            <a href="{% url 'list_product_rewards' %}" class="block px-4 py-2 text-white hover:bg-gray-700">Produits des points</a>
+        </li>
+        
     </ul>
 </div>
 
