--- a/base/templates/base/mobile_money_checkout.html
+++ b/base/templates/base/mobile_money_checkout.html
@@ -4,7 +4,7 @@
 <div class="container mx-auto p-6">
     <!-- Titre principal -->
     <div class="welcome-message mb-6 text-center">
-        <h1 class="text-3xl font-semibold">Payer par Mobile Money sur Lushi Marché</h1>
+        <h1 class="text-3xl font-semibold">Payer par Mobile Money sur wina Marché</h1>
         <p class="text-lg mt-2">Pour effectuer le paiement de vos articles, suivez les instructions ci-dessous.</p>
     </div>
 
