--- a/base/templates/base/stores_by_typestore.html
+++ b/base/templates/base/stores_by_typestore.html
@@ -133,6 +133,7 @@
 
   <!-- 🏪 Résultat -->
   <!-- 🏪 Résultat des stores -->
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
   <div id="stores" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 mt-6 mb-4">
   {% for store in stores %}
     <a href="{% url 'store_detail' store.slug %}" class="flex-shrink-0 relative border rounded-lg shadow hover:shadow-lg overflow-hidden bg-white">
@@ -167,7 +168,7 @@
     <p class="text-gray-500">Aucun store trouvé.</p>
   {% endfor %}
 </div>
-
+</div>
 <!-- Pagination -->
 <!-- Pagination -->
 {% if stores.has_other_pages %}
