--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,13 @@
     <meta name="csrf-token" content="{{ csrf_token }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>WINA</title>
+    <title>WINA MARCHE</title>
     <link rel="stylesheet" href="{% static 'css/dist/styles.css' %}">
+    <!-- ✅ FAVICONS -->
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon_io/favicon.ico' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon_io/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon_io/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'favicon_io/site.webmanifest' %}">
     {% block meta_tags %}{% endblock %}
     {% tailwind_css %}
 </head>
