--- a/templates/base.html
+++ b/templates/base.html
@@ -69,6 +69,9 @@
     <ul class="absolute left-0 mt-2 w-48 bg-gray-800 rounded-md shadow-lg z-20 hidden" id="immoDropdown">
         
         <li>
+            <a href="{% url 'liste_invites' %}" class="block px-4 py-2 text-white hover:bg-gray-700">Liste de visibilite</a>
+        </li>
+        <li>
             <a href="{% url 'product_list_wina' %}" class="block px-4 py-2 text-white hover:bg-gray-700">Liste produits </a>
         </li>
         <li>
