--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
     <ul class="absolute left-0 mt-2 w-48 bg-gray-800 rounded-md shadow-lg z-20 hidden" id="immoDropdown">
         
         <li>
-            <a href="{% url 'liste_invites' %}" class="block px-4 py-2 text-white hover:bg-gray-700">Liste de visibilite</a>
+            <a href="{% url 'liste_invites' %}" class="block px-4 py-2 text-white hover:bg-gray-700">Liste de visibilité</a>
         </li>
         <li>
             <a href="{% url 'product_list_wina' %}" class="block px-4 py-2 text-white hover:bg-gray-700">Liste produits </a>
@@ -158,7 +158,11 @@
                   d="M19 9l-7 7-7-7"></path>
         </svg>
     </button>
+    
     <ul class="absolute left-0 mt-2 w-full bg-gray-800 rounded-md shadow-lg z-20 hidden" id="immoMobileDropdown">
+        <li>
+            <a href="{% url 'liste_invites' %}" class="block px-4 py-2 text-white hover:bg-gray-700">Liste de visibilité</a>
+        </li>
         <li>
             <a href="{% url 'product_list_wina' %}" class="block px-4 py-2 text-white hover:bg-gray-700">Liste produits</a>
         </li>
