--- a/base/templates/base/solde.html
+++ b/base/templates/base/solde.html
@@ -39,7 +39,7 @@
       class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white py-3 px-6 rounded-lg transition duration-300">
      Historique de retrait
    </a>
-   <a href="{% url 'transfer_visitemoney' %}" 
+   <a href="{% url 'confirmer_mot_de_passe2' %}" 
    class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white py-3 px-6 rounded-lg transition duration-300">
   Transfert ton solde à un(e) ami(e) 
 </a>
