--- a/base/templates/base/edit_product.html
+++ b/base/templates/base/edit_product.html
@@ -36,6 +36,10 @@
                 {{ form.image }}
             </div>
             <div class="mb-4">
+                <!-- ✅ Ajout du type_product -->
+                {{ form.type_product }}
+            </div>
+            <div class="mb-4">
                 <label class="block text-lg font-medium mb-2">Sélectionnez des images pour la galerie :</label>
                 <input name="image_galerie" type="file" multiple class="form-control-file bg-gray-200 border border-gray-300 rounded-md p-2">
                 <p class="text-gray-500 text-sm mt-1">Vous pouvez sélectionner plusieurs fichiers.</p>
