--- a/base/templates/base/list_product_reward.html
+++ b/base/templates/base/list_product_reward.html
@@ -19,11 +19,12 @@
 </div> 
      <!-- Message sur les points de fidélité -->
      <div class="mb-8 p-4 bg-blue-100 text-blue-800 rounded-lg">
-        <h3 class="font-semibold text-xl text-center">Gagnez des points de fidélité !</h3>
-        <p class="text-center">
-            Après <strong>5 achats</strong>, vous gagnez <strong>1 point de fidélité</strong>. Maximisez vos achats pour accumuler des points et profiter d’avantages exclusifs ! Plus vous achetez, plus vous gagnez de points. De plus, vous pouvez également accumuler des points en likant, commentant et partageant des publicités, ce qui vous permet de gagner jusqu’à <strong>7 points par publicité</strong> ! 🚀
-        </p>
-    </div>
+      <h3 class="font-semibold text-xl text-center">Gagnez des points de fidélité !</h3>
+      <p class="text-center">
+          Après <strong>5 achats</strong>, vous gagnez <strong>1 point de fidélité</strong>. Maximisez vos achats pour accumuler des points et profiter d’avantages exclusifs ! Plus vous achetez, plus vous gagnez de points. De plus, si vous participez à un tirage au sort ou à une loterie, vous gagnez <strong>7 points</strong> pour chaque participation ! 🎉
+      </p>
+  </div>
+  
     <!-- Titre de la page -->
     <h2 class="text-3xl font-bold mb-4">Explorer les produits ou services achétables avec vos Points de fidélité</h2>
 
