--- a/base/templates/base/lottery_result.html
+++ b/base/templates/base/lottery_result.html
@@ -218,7 +218,7 @@
               class="absolute top-2 right-2 text-red-600 text-2xl font-bold z-50">X</button>
   
       <!-- Titre -->
-      <h2 class="text-2xl font-bold mb-4 mt-4">🎡 Tirage en cours...</h2>
+      <h2 class="text-2xl font-bold mb-4 mt-4">🎡 Resultat du Tirage ...</h2>
   
       <!-- Contenu -->
       <div class="flex-1 overflow-y-auto min-h-0 px-4 pb-4">
